Changed category for one item & fixed another item's name

--- a/manifest.json
+++ b/manifest.json
@@ -286,7 +286,7 @@
 			"03210": {
 				"names": {
 					"ru": [
-						"Клинок из красн.желез",
+						"Клинок из красн.желез.",
 						"Клинок из красного железа",
 						"ККЖ"
 					],
@@ -4298,6 +4298,11 @@
 				"height": 32
 			},
 			"50084": {
+				"names": {},
+				"width": 32,
+				"height": 32
+			},
+			"50089": {
 				"names": {},
 				"width": 32,
 				"height": 32
@@ -9497,11 +9502,6 @@
 				"height": 32
 			},
 			"50051": {
-				"names": {},
-				"width": 32,
-				"height": 32
-			},
-			"50089": {
 				"names": {},
 				"width": 32,
 				"height": 32
